# option_finder

./: .gitignore  LICENSE  README.md  claude.md  env.template.txt  pyproject.toml
.cursor/: mcp.json.example
.cursor/rules/: alerts.mdc  backtest.mdc  database.mdc  project-context.mdc  python-standards.mdc  scheduler.mdc  scoring.mdc  streamlit-app.mdc
.cursor/skills/options-anomaly-detection/: SKILL.md
.cursor/skills/polygon-api/: SKILL.md  reference.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_trigger_candidates.py  003_trigger_grace_period.py  004_alerts_sent_status_index.py  005_partition_large_tables.py
scripts/: backfill.py  probe_flatfiles.py  probe_stock_flatfiles.py  run_all.bat  run_dashboard.bat  run_scanner.bat  smoke_test.py  test_pipeline.py
src/: exceptions.py  main.py
src/alerts/: __init__.py  dedup.py  formatter.py  sender.py
src/backtest/: __init__.py
src/config/: __init__.py  constants.py  settings.py
src/dashboard/: app.py  db.py
src/dashboard/pages/: alert_feed.py  system_status.py  ticker_lookup.py
src/database/: __init__.py  base.py  engine.py  models.py
src/database/repositories/: __init__.py  alert_repo.py  options_snapshot_repo.py  scoring_repo.py  stock_snapshot_repo.py  trigger_candidate_repo.py
src/ingestion/: __init__.py  client.py  earnings.py  flatfiles.py  market_status.py  news.py  option_snapshots.py  schemas.py  stock_snapshots.py
src/scheduler/: __init__.py  loop.py  pipeline.py
src/scoring/: __init__.py  baseline.py  composite.py  factors.py  gate.py  models.py
tests/: conftest.py
tests/test_alerts/: test_formatter.py  test_sender.py
tests/test_config/: test_settings.py
tests/test_ingestion/: test_client.py  test_schemas.py
tests/test_scoring/: test_baseline.py  test_factors.py  test_gate.py
